--- a/Anomaly Detection through Linear Regression.ipynb
+++ b/Anomaly Detection through Linear Regression.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# loading required packages\n",
     "from sklearn import linear_model\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -18,6 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# taking dummy temp and current values, temp should always be in proportion to electric current\n",
     "Device_temprature= np.array([2,4,6,8,10,12,15,16,18,20])\n",
     "input_current_in_device= np.array([1,2,3,4,5,6,7,8,9, 10])"
    ]
@@ -51,7 +53,7 @@
     }
    ],
    "source": [
-    "plt.plot(Device_temprature, input_current_in_device)"
+    "plt.plot(Device_temprature, input_current_in_device) # we see expected relation"
    ]
   },
   {
@@ -60,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model= linear_model.LinearRegression()\n",
+    "model= linear_model.LinearRegression() # buiklding a linear model, it can be a non linear also\n",
     "X_reshaped= np.reshape(Device_temprature, (-1,1))\n",
     "model.fit(X_reshaped, input_current_in_device)"
    ]
@@ -71,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "runtime_temp=np.array([20,26,28,32,34,35,28,29,35])\n",
+    "runtime_temp=np.array([20,26,28,32,34,35,28,29,35])   # taking temp and current data at run time, when we need to detect anomaly\n",
     "runtime_electric_current= np.array([10,11,9,11,12,12,11,12,13])"
    ]
   },
@@ -113,7 +115,8 @@
     }
    ],
    "source": [
-    "plt.plot(predicted_temp, runtime_temp)"
+    "plt.plot(predicted_temp, runtime_temp)  # error in predicted temp and actual temp is severity of abnomality. In plot below\n",
+    "#ideally this should be straing line"
    ]
   },
   {
